oxiplate-derive/tests/crates/unreachable-stable/tests/broken/item/unhandled-next-whitespace-preference.stderr
error: proc-macro derive panicked
 --> tests/broken/item/unhandled-next-whitespace-preference.rs:3:10
  |
3 | #[derive(Oxiplate)]
  |          ^^^^^^^^
  |
  = help: message: internal error: entered unreachable code: Internal Oxiplate error. Enable `better-internal-errors` feature for an easier-to-debug error message. Error: Unhandled whitespace command in next tag start

error[E0277]: `Data` doesn't implement `std::fmt::Display`
 --> tests/broken/item/unhandled-next-whitespace-preference.rs:8:18
  |
8 |     print!("{}", Data);
  |             --   ^^^^ `Data` cannot be formatted with the default formatter
  |             |
  |             required by this formatting parameter
  |
help: the trait `std::fmt::Display` is not implemented for `Data`
 --> tests/broken/item/unhandled-next-whitespace-preference.rs:5:1
  |
5 | struct Data;
  | ^^^^^^^^^^^
  = note: in format strings you may be able to use `{:?}` (or {:#?} for pretty-print) instead
  = note: this error originates in the macro `$crate::format_args` which comes from the expansion of the macro `print` (in Nightly builds, run with -Z macro-backtrace for more info)
