oxiplate-derive/tests/crates/unreachable-stable/tests/broken/item/unhandled-next-whitespace-preference.rs
use oxiplate_derive::Oxiplate;

#[derive(Oxiplate)]
#[oxiplate_inline(r#"{{ "" -}} {{$ "" }}"#)]
struct Data;

fn main() {
    print!("{}", Data);
}
